refactor code and unify test naming convention