@@ -32,14 +32,14 @@ class MovementAnalyzerTest {
 
 
     @Test
-    void analyzeTripTimeline_shouldDetectContinuousMovement() {
+    void analyzeTripTimeline_shouldDetectContinuousMovement_whenSpeedIsAboveThreshold() {
 
         List<TrackPoint> points = new ArrayList<>();
-        points.add(createPoint(52.0000, 21.0000, "2023-05-10T10:00:00Z"));
-        points.add(createPoint(52.0005, 21.0000, "2023-05-10T10:00:30Z"));
-        points.add(createPoint(52.0010, 21.0000, "2023-05-10T10:01:00Z"));
-        points.add(createPoint(52.0015, 21.0000, "2023-05-10T10:01:30Z"));
-        points.add(createPoint(52.0020, 21.0000, "2023-05-10T10:02:00Z"));
+        points.add(createPoint(52.0000, 21.0000, "2023-05-10T10:00:00Z", 5.0));
+        points.add(createPoint(52.0005, 21.0000, "2023-05-10T10:00:30Z", 5.4));
+        points.add(createPoint(52.0010, 21.0000, "2023-05-10T10:01:00Z", 4.6));
+        points.add(createPoint(52.0015, 21.0000, "2023-05-10T10:01:30Z", 5.8));
+        points.add(createPoint(52.0020, 21.0000, "2023-05-10T10:02:00Z", 6.0));
 
         Map<LocalDate, DayData> result = MovementAnalyzer.analyzeTripTimeline(points, zoneId);
 
@@ -56,14 +56,14 @@ class MovementAnalyzerTest {
 
 
     @Test
-    void analyzeTripTimeline_shouldDetectContinuousStop() {
+    void analyzeTripTimeline_shouldDetectContinuousStop_whenSpeedIsBelowThreshold() {
 
         List<TrackPoint> points = new ArrayList<>();
-        points.add(createPoint(52.0, 21.0, "2023-05-10T10:00:00Z"));
-        points.add(createPoint(52.0, 21.0, "2023-05-10T10:00:30Z"));
-        points.add(createPoint(52.0, 21.0, "2023-05-10T10:01:00Z"));
-        points.add(createPoint(52.0, 21.0, "2023-05-10T10:01:30Z"));
-        points.add(createPoint(52.0, 21.0, "2023-05-10T10:02:00Z"));
+        points.add(createPoint(52.22970, 21.01220, "2023-05-10T10:00:00Z", 0.0));
+        points.add(createPoint(52.22971, 21.01221, "2023-05-10T10:00:30Z", 0.2));
+        points.add(createPoint(52.22969, 21.01219, "2023-05-10T10:01:00Z", 0.1));
+        points.add(createPoint(52.22970, 21.01222, "2023-05-10T10:01:30Z", 0.0));
+        points.add(createPoint(52.22972, 21.01220, "2023-05-10T10:02:00Z", 0.1));
 
         Map<LocalDate, DayData> result = MovementAnalyzer.analyzeTripTimeline(points, zoneId);
 
@@ -74,40 +74,60 @@ class MovementAnalyzerTest {
 
 
     @Test
-    void analyzeTripTimeline_shouldDebounceMicroStop_andMergeIntoMovement() {
+    void analyzeTripTimeline_shouldIgnoreStop_whenDurationIsBelowThreshold() {
         List<TrackPoint> points = new ArrayList<>();
 
-        //Ruch przez 90s
-        points.add(createPoint(52.000, 21.0, "2023-05-10T10:00:00Z"));
-        points.add(createPoint(52.005, 21.0, "2023-05-10T10:00:45Z"));
-        points.add(createPoint(52.010, 21.0, "2023-05-10T10:01:30Z"));
+        // Ruch przez 90s
+        points.add(createPoint(52.22010, 21.00110, "2023-05-10T10:00:00Z", 12.4));
+        points.add(createPoint(52.22150, 21.00280, "2023-05-10T10:00:45Z", 13.8));
+        points.add(createPoint(52.22290, 21.00420, "2023-05-10T10:01:30Z", 11.9));
 
-        //Postój przez 30s
-        points.add(createPoint(52.010, 21.0, "2023-05-10T10:02:00Z"));
+        // Spadek prędkości przez 30s
+        points.add(createPoint(52.22292, 21.00422, "2023-05-10T10:02:00Z", 0.1));
 
-        //Ruch przez 90s
-        points.add(createPoint(52.015, 21.0, "2023-05-10T10:02:45Z"));
-        points.add(createPoint(52.020, 21.0, "2023-05-10T10:03:30Z"));
-
+        // Ruch przez 90s
+        points.add(createPoint(52.22440, 21.00590, "2023-05-10T10:02:45Z", 14.1));
+        points.add(createPoint(52.22590, 21.00750, "2023-05-10T10:03:30Z", 13.2));
 
         Map<LocalDate, DayData> result = MovementAnalyzer.analyzeTripTimeline(points, zoneId);
 
-
         DayData dayData = result.get(LocalDate.of(2023, 5, 10));
         assertThat(dayData.events).hasSize(1);
-        assertThat(dayData.events.get(0).type()).isEqualTo("RUCH");
-        assertThat(dayData.events.get(0).durationSeconds()).isEqualTo(210);
+        assertThat(dayData.events.getFirst().type()).isEqualTo("RUCH");
+        assertThat(dayData.events.getFirst().durationSeconds()).isEqualTo(210);
+    }
+
+    @Test
+    void analyzeTripTimeline_shouldNotResumeMovement_whenDistanceIsBelowThreshold() {
+        List<TrackPoint> points = new ArrayList<>();
+
+        // Postój > 60s)
+        points.add(createPoint(52.000, 21.000, "2023-05-10T10:00:00Z", 0.0));
+        points.add(createPoint(52.000, 21.000, "2023-05-10T10:01:10Z", 0.0));
+
+        // Rozpoczęcie ruchu ale za mały dystans
+        points.add(createPoint(52.0001, 21.0001, "2023-05-10T10:01:20Z", 5.0));
+
+        // Dystans >80m
+        points.add(createPoint(52.010, 21.010, "2023-05-10T10:02:00Z", 20.0));
+
+        Map<LocalDate, DayData> result = MovementAnalyzer.analyzeTripTimeline(points, zoneId);
+
+        DayData dayData = result.get(LocalDate.of(2023, 5, 10));
+
+        assertThat(dayData.events).hasSize(2);
+        assertThat(dayData.events.get(0).type()).isEqualTo("POSTÓJ");
+        assertThat(dayData.events.get(1).type()).isEqualTo("RUCH");
     }
 
 
     @Test
-    void analyzeTripTimeline_shouldDetectGap_whenTimeAndDistanceAreHuge() {
+    void aanalyzeTripTimeline_shouldDetectGap_whenTimeAndDistanceExceedThresholds() {
 
         List<TrackPoint> points = new ArrayList<>();
-        points.add(createPoint(52.0, 21.0, "2023-05-10T10:00:00Z"));
+        points.add(createPoint(52.22970, 21.01220, "2023-05-10T10:00:00Z", 15.0));
 
-        //Przeskok o ponad 10 km i dokładnie 2 godziny w przód
-        points.add(createPoint(52.1, 21.0, "2023-05-10T12:00:00Z"));
+        points.add(createPoint(52.07410, 21.02890, "2023-05-10T12:00:00Z", 14.2));
 
         Map<LocalDate, DayData> result = MovementAnalyzer.analyzeTripTimeline(points, zoneId);
 
@@ -119,12 +139,12 @@ class MovementAnalyzerTest {
 
 
     @Test
-    void analyzeTripTimeline_shouldSplitEventsAtMidnight() {
+    void analyzeTripTimeline_shouldSplitEventsAtMidnight_whenPointsSpanAcrossTwoDays() {
 
         List<TrackPoint> points = new ArrayList<>();
-        points.add(createPoint(52.000, 21.0, "2023-05-10T23:40:00Z"));
-        points.add(createPoint(52.010, 21.0, "2023-05-10T23:55:00Z"));
-        points.add(createPoint(52.020, 21.0, "2023-05-11T00:20:00Z"));
+        points.add(createPoint(52.21000, 21.00000, "2023-05-10T23:40:00Z", 18.2));
+        points.add(createPoint(52.22500, 21.01500, "2023-05-10T23:55:00Z", 17.5));
+        points.add(createPoint(52.25000, 21.04000, "2023-05-11T00:20:00Z", 18.0));
 
         Map<LocalDate, DayData> result = MovementAnalyzer.analyzeTripTimeline(points, zoneId);
 
@@ -140,11 +160,12 @@ class MovementAnalyzerTest {
         assertThat(day2.events.get(0).start()).isEqualTo(Instant.parse("2023-05-11T00:00:00Z"));
     }
 
-    private TrackPoint createPoint(double lat, double lon, String instantStr) {
+    private TrackPoint createPoint(double lat, double lon, String instantStr, double speed) {
         TrackPoint tp = new TrackPoint();
         tp.setLatitude(lat);
         tp.setLongitude(lon);
         tp.setTime(Instant.parse(instantStr));
+        tp.setSpeed(speed);
         return tp;
     }
 }
